Update fast_tls to 1.0.23

--- a/rebar.config
+++ b/rebar.config
@@ -33,7 +33,7 @@
 {deps,
  [
   {base16, "1.0.0"},
-  {exml, ".*", {git, "https://github.com/esl/exml.git", {tag, "3.0.1"}}},
+  {exml, {git, "https://github.com/esl/exml.git", {tag, "3.0.1"}}},
   {lager, "3.6.4"},
   {lager_syslog, {git, "https://github.com/erlang-lager/lager_syslog.git", {tag, "3.0.3"}}},
   {cowboy, "2.4.0"},
@@ -41,10 +41,10 @@
   {exometer_report_graphite, {git, "https://github.com/esl/exometer_report_graphite.git", {branch, "master"}}},
   {exometer_report_statsd, {git, "https://github.com/esl/exometer_report_statsd.git", {branch, "master"}}},
   {jiffy, "0.15.2"},
-  {fusco, ".*", {git, "https://github.com/esl/fusco.git", {branch, "master"}}},
+  {fusco, {git, "https://github.com/esl/fusco.git", {branch, "master"}}},
   {idna, "5.1.2"},
   {uuid, "1.7.3", {pkg, uuid_erl}},
-  {fast_tls, ".*", {git, "https://github.com/processone/fast_tls.git", "a166f0e9fe78304e5ca628fd5eff57c850241813"}},
+  {fast_tls, "1.0.23"},
   {lasse, "1.2.0"},
   {worker_pool, ".*", {git, "https://github.com/inaka/worker_pool.git", {ref, "59f2ff8"}}},
 
