Update worker_pool to 3.1.1

--- a/rebar.config
+++ b/rebar.config
@@ -46,8 +46,7 @@
   {uuid, "1.7.3", {pkg, uuid_erl}},
   {fast_tls, "1.0.23"},
   {lasse, "1.2.0"},
-  {worker_pool, ".*", {git, "https://github.com/inaka/worker_pool.git", {ref, "59f2ff8"}}},
-
+  {worker_pool, "3.1.1"}, %% version 4.0.0 requires OTP>=21
   {riakc, "2.5.3"},
   {cqerl, ".*", {git, "https://github.com/esl/cqerl.git", {ref, "08067ae"}}},
   {mysql, ".*", {git, "https://github.com/mysql-otp/mysql-otp.git", {tag, "1.3.2"}}},
