Update esl/cqerl to master tip.

--- a/rebar.config
+++ b/rebar.config
@@ -48,7 +48,7 @@
   {lasse, "1.2.0"},
   {worker_pool, "3.1.1"}, %% version 4.0.0 requires OTP>=21
   {riakc, "2.5.3"},
-  {cqerl, ".*", {git, "https://github.com/esl/cqerl.git", {ref, "08067ae"}}},
+  {cqerl, {git, "https://github.com/esl/cqerl.git", {branch, "master"}}},
   {mysql, ".*", {git, "https://github.com/mysql-otp/mysql-otp.git", {tag, "1.3.2"}}},
   {epgsql, ".*", {git, "https://github.com/epgsql/epgsql.git", {tag, "3.4.0"}}},
   {eodbc, ".*", {git, "https://github.com/arcusfelis/eodbc.git", {ref, "528e5e9a51263e6938b7140970893b8128553abc"}}},
