--- a/rebar.config
+++ b/rebar.config
@@ -49,8 +49,8 @@
   {worker_pool, "3.1.1"}, %% version 4.0.0 requires OTP>=21
   {riakc, "2.5.3"},
   {cqerl, {git, "https://github.com/esl/cqerl.git", {branch, "master"}}},
-  {mysql, ".*", {git, "https://github.com/mysql-otp/mysql-otp.git", {tag, "1.3.2"}}},
-  {epgsql, ".*", {git, "https://github.com/epgsql/epgsql.git", {tag, "3.4.0"}}},
+  {mysql, {git, "https://github.com/mysql-otp/mysql-otp.git", {tag, "1.3.2"}}},
+  {epgsql, "4.1.0"},
   {eodbc, ".*", {git, "https://github.com/arcusfelis/eodbc.git", {ref, "528e5e9a51263e6938b7140970893b8128553abc"}}},
   {tirerl, ".*", {git, "https://github.com/inaka/tirerl.git", {ref, "123e935"}}},
 
@@ -168,7 +168,7 @@
 
  ]}.
 
-{dialyzer, [{plt_extra_apps, [cowboy, lasse, p1_utils, ranch, gen_fsm_compat]}]}.
+{dialyzer, [{plt_extra_apps, [cowboy, lasse, p1_utils, ranch, gen_fsm_compat, epgsql]}]}.
 
 {cover_enabled, true}.
 {cover_print_enabled, true}.
