--- a/rebar.config
+++ b/rebar.config
@@ -51,7 +51,7 @@
   {cqerl, {git, "https://github.com/esl/cqerl.git", {branch, "master"}}},
   {mysql, {git, "https://github.com/mysql-otp/mysql-otp.git", {tag, "1.3.2"}}},
   {epgsql, "4.1.0"},
-  {eodbc, ".*", {git, "https://github.com/arcusfelis/eodbc.git", {ref, "528e5e9a51263e6938b7140970893b8128553abc"}}},
+  {eodbc, {git, "https://github.com/arcusfelis/eodbc.git", {branch, "master"}}},
   {tirerl, ".*", {git, "https://github.com/inaka/tirerl.git", {ref, "123e935"}}},
 
   {cache_tab, ".*", {git, "https://github.com/processone/cache_tab", {tag, "1.0.12"}}},
