Update tirerl to 1.1.0

--- a/rebar.config
+++ b/rebar.config
@@ -52,7 +52,7 @@
   {mysql, {git, "https://github.com/mysql-otp/mysql-otp.git", {tag, "1.3.2"}}},
   {epgsql, "4.1.0"},
   {eodbc, {git, "https://github.com/arcusfelis/eodbc.git", {branch, "master"}}},
-  {tirerl, ".*", {git, "https://github.com/inaka/tirerl.git", {ref, "123e935"}}},
+  {tirerl, "1.1.0"},
 
   {cache_tab, ".*", {git, "https://github.com/processone/cache_tab", {tag, "1.0.12"}}},
   {stringprep, ".*", {git, "https://github.com/processone/stringprep.git", {tag, "1.0.7"}}},
