Update cache_tab to 1.0.12

--- a/rebar.config
+++ b/rebar.config
@@ -54,7 +54,7 @@
   {eodbc, {git, "https://github.com/arcusfelis/eodbc.git", {branch, "master"}}},
   {tirerl, "1.1.0"},
 
-  {cache_tab, ".*", {git, "https://github.com/processone/cache_tab", {tag, "1.0.12"}}},
+  {cache_tab, "1.0.14"},
   {stringprep, ".*", {git, "https://github.com/processone/stringprep.git", {tag, "1.0.7"}}},
 
   {proper, ".*", {git, "https://github.com/manopapad/proper.git", {tag, "v1.2"}}},
