--- a/rebar.config
+++ b/rebar.config
@@ -55,7 +55,7 @@
   {tirerl, "1.1.0"},
 
   {cache_tab, "1.0.14"},
-  {stringprep, ".*", {git, "https://github.com/processone/stringprep.git", {tag, "1.0.7"}}},
+  {stringprep, "1.0.12"},
 
   {proper, ".*", {git, "https://github.com/manopapad/proper.git", {tag, "v1.2"}}},
   {meck, ".*", {git, "https://github.com/eproxus/meck.git", {ref, "65b79f4"}}},
