Use proper from hex.pm

--- a/rebar.config
+++ b/rebar.config
@@ -57,7 +57,7 @@
   {cache_tab, "1.0.14"},
   {stringprep, "1.0.12"},
 
-  {proper, ".*", {git, "https://github.com/manopapad/proper.git", {tag, "v1.2"}}},
+  {proper, "1.2.0"},
   {meck, ".*", {git, "https://github.com/eproxus/meck.git", {ref, "65b79f4"}}},
 
   {pa, ".*", {git, "https://github.com/erszcz/pa.git", "e53c540"}},
