Update meck to 0.8.11

--- a/rebar.config
+++ b/rebar.config
@@ -58,7 +58,7 @@
   {stringprep, "1.0.12"},
 
   {proper, "1.2.0"},
-  {meck, ".*", {git, "https://github.com/eproxus/meck.git", {ref, "65b79f4"}}},
+  {meck, "0.8.11"},
 
   {pa, ".*", {git, "https://github.com/erszcz/pa.git", "e53c540"}},
   {usec, ".*", {git, "https://github.com/esl/usec.git", {branch, "master"}}},
