Update erszcz/pa to master tip.

--- a/rebar.config
+++ b/rebar.config
@@ -60,7 +60,7 @@
   {proper, "1.2.0"},
   {meck, "0.8.11"},
 
-  {pa, ".*", {git, "https://github.com/erszcz/pa.git", "e53c540"}},
+  {pa, {git, "https://github.com/erszcz/pa.git", {branch, "master"}}},
   {usec, ".*", {git, "https://github.com/esl/usec.git", {branch, "master"}}},
   {bbmustache, ".*", {git, "https://github.com/soranoba/bbmustache.git", {tag, "v1.4.0"}}},
   {recon, ".*", {git, "https://github.com/ferd/recon.git", "2.3.2"}},
