Update bbmustache to 1.5.0

--- a/rebar.config
+++ b/rebar.config
@@ -61,8 +61,8 @@
   {meck, "0.8.11"},
 
   {pa, {git, "https://github.com/erszcz/pa.git", {branch, "master"}}},
-  {usec, ".*", {git, "https://github.com/esl/usec.git", {branch, "master"}}},
-  {bbmustache, ".*", {git, "https://github.com/soranoba/bbmustache.git", {tag, "v1.4.0"}}},
+  {usec, {git, "https://github.com/esl/usec.git", {branch, "master"}}},
+  {bbmustache, "1.5.0"},
   {recon, ".*", {git, "https://github.com/ferd/recon.git", "2.3.2"}},
   {erlcloud, ".*", {git, "https://github.com/erlcloud/erlcloud.git", "c119698"}},
   {jwerl, ".*", {git, "https://github.com/emedia-project/jwerl.git", "3f365d1"}},
