Update recon to 2.3.6

--- a/rebar.config
+++ b/rebar.config
@@ -63,7 +63,7 @@
   {pa, {git, "https://github.com/erszcz/pa.git", {branch, "master"}}},
   {usec, {git, "https://github.com/esl/usec.git", {branch, "master"}}},
   {bbmustache, "1.5.0"},
-  {recon, ".*", {git, "https://github.com/ferd/recon.git", "2.3.2"}},
+  {recon, "2.3.6"},
   {erlcloud, ".*", {git, "https://github.com/erlcloud/erlcloud.git", "c119698"}},
   {jwerl, ".*", {git, "https://github.com/emedia-project/jwerl.git", "3f365d1"}},
   {csv, ".*", {git, "https://github.com/bszaf/csv.git", {ref, "b0b854d"}}},
