--- a/rebar.config
+++ b/rebar.config
@@ -64,7 +64,7 @@
   {usec, {git, "https://github.com/esl/usec.git", {branch, "master"}}},
   {bbmustache, "1.5.0"},
   {recon, "2.3.6"},
-  {erlcloud, ".*", {git, "https://github.com/erlcloud/erlcloud.git", "c119698"}},
+  {erlcloud, "3.1.12"},
   {jwerl, ".*", {git, "https://github.com/emedia-project/jwerl.git", "3f365d1"}},
   {csv, ".*", {git, "https://github.com/bszaf/csv.git", {ref, "b0b854d"}}},
   {cpool, "0.1.0"},
