Update jwerl to 1.0.0

--- a/rebar.config
+++ b/rebar.config
@@ -65,7 +65,7 @@
   {bbmustache, "1.5.0"},
   {recon, "2.3.6"},
   {erlcloud, "3.1.12"},
-  {jwerl, ".*", {git, "https://github.com/emedia-project/jwerl.git", "3f365d1"}},
+  {jwerl, "1.0.0"},
   {csv, ".*", {git, "https://github.com/bszaf/csv.git", {ref, "b0b854d"}}},
   {cpool, "0.1.0"},
   {observer_cli, "1.1.0"},
