--- a/rebar.config
+++ b/rebar.config
@@ -66,9 +66,9 @@
   {recon, "2.3.6"},
   {erlcloud, "3.1.12"},
   {jwerl, "1.0.0"},
-  {csv, ".*", {git, "https://github.com/bszaf/csv.git", {ref, "b0b854d"}}},
+  {csv, {git, "https://github.com/bszaf/csv.git", {branch, "master"}}},
   {cpool, "0.1.0"},
-  {observer_cli, "1.1.0"},
+  {observer_cli, "1.3.3"},
   {nkpacket, {git, "https://github.com/michalwski/nkpacket.git", {ref, "b6f8c73"}}},
   {nksip, {git, "https://github.com/NetComposer/nksip.git", {ref, "1a29ef3"}}},
   {eredis, {git, "https://github.com/wooga/eredis.git", {tag, "v1.0.8"}}},
