Update eredis to 1.1.0

--- a/rebar.config
+++ b/rebar.config
@@ -71,7 +71,7 @@
   {observer_cli, "1.3.3"},
   {nkpacket, {git, "https://github.com/michalwski/nkpacket.git", {ref, "b6f8c73"}}},
   {nksip, {git, "https://github.com/NetComposer/nksip.git", {ref, "1a29ef3"}}},
-  {eredis, {git, "https://github.com/wooga/eredis.git", {tag, "v1.0.8"}}},
+  {eredis, "1.1.0"},
   {gen_fsm_compat, "0.3.0"},
   {erlang_pmp, "0.1.1"}
  ]}.
